<resources>
    <string name="app_name">Muapp</string>
    <string name="facebook_app_id">185195208478071</string>
    <string name="facebook_account_key_token">3818036a6661eaab9ffcac9f7417928e</string>
    <string name="fb_login_protocol_scheme">fb185195208478071</string>
    <string name="lbl_please_wait">Please wait</string>
    <string name="lbl_loading_information">Loading information</string>
    <string name="lbl_menu_discover">Discover</string>
    <string name="lbl_menu_waiting">Waiting</string>
    <string name="lbl_menu_chats">Messages</string>
    <string name="lbl_menu_profile">My Profile</string>
    <string name="lbl_menu_rewards">Muappis</string>
    <string name="lbl_login_with_facebook">Login with Facebook</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_and">and</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_continue">Continue</string>
    <string name="lbl_agree">By continuing, you agree to our</string>
    <string name="lbl_facebook_terms">We don’t post anything on your Facebook</string>
    <string name="lbl_info_title">Your privacy is our priority</string>
    <string name="lbl_info_message">We don’t post anything on your social networks.\n\nWe request Facebook authorization in order to verify that you are a real person.\n\nYour location will never be shown to other users</string>
    <string name="lbl_correct_information">Is your information correct?</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_cant_change_info">You WON’T be able to change it. If it’s not correct, please update it on Facebook and click on Synchronize</string>
    <string name="lbl_gender_male">Male</string>
    <string name="lbl_gender_female">Female</string>
    <string name="lbl_gender_unknown">Unknown</string>
    <string name="lbl_correct">It’s correct</string>
    <string name="lbl_synchronize">Synchronize</string>
    <string name="email_contact">info@muapp.me</string>
    <string name="lbl_error_requirements">We’re sorry but you don’t meet the requirements to register. You can contact us at</string>
    <string name="lbl_error_minor">We’re sorry but you can’t register in muapp yet, you need to be 18. We’ll be waiting for you!</string>
    <string name="lbl_error_real_person">We’re sorry but you don’t meet the requirements to verify that you’re a real person. If we’ve made a mistake, please contact us:\ninfo@muapp.me</string>
    <string name="lbl_error_profile_picture">Without a profile picture in Facebook, you can’t register in muapp. Please, add a profile picture in Facebook and try again. We’ll be waiting for you!</string>
    <string name="lbl_error_permissions">In order to show you better results, we need you to grant all Facebook permissions.</string>
    <string name="lbl_confirm_gender">Choose your gender</string>
    <string name="lbl_confirm_gender_description">You WON’T be able to change this information. You will only see people of the opposite gender, please make sure it is correct.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_man_gate">ManGateActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_man_gate_title">NOW GIRLS WILL VOTE IF YOU CAN GET IN… GOOD LUCK!</string>
    <string name="txt_man_gate_youre_in">CONGRATULATIONS!! YOU\'RE IN.</string>
    <string name="lbl_man_gate_speed_up">Speed up your entrance.</string>
    <string name="lbl_man_have_code"><u>Do you have a code?</u></string>
    <string name="lbl_invite_your_friends">Enter muapp getting 100%.\nGet more percentage inviting friends.</string>
    <string name="lbl_insert_code">Insert an invitation code</string>
    <string name="lbl_invalid_code">Invalid code</string>
    <string name="lbl_invalid_code_description">The code %s is invalid. Try again with a different code or verify that you have written it correctly.</string>
    <string name="lbl_use_my_code">Use my code</string>
    <string name="lbl_use_code_register">and get %d%% progress in your entrance.</string>
    <string name="lbl_use_my_code_settings" formatted="false">Use my code %s in Muapp and earn 40%% in the input process. Start meeting people like you! http://app.muapp.me/download</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_share_dialog_title">Share your personal code</string>
    <string name="lbl_share_dialog_content" formatted="false">Invite %d more people and get %d%% more with each code.</string>
    <string name="lbl_share_dialog_content_settings">Share your code with your friends and help them get 40% more of the votes they need</string>
    <string name="lbl_click_on_start">Click on Start and enjoy your Muapp experience.</string>
    <string name="lbl_start">Start</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_edit_description">Edit description</string>
    <string name="hint_bio">Biography</string>
    <string name="action_take_photo">Take photo</string>
    <string name="action_select_photo">Select from gallery</string>
    <string name="action_select_from_facebook">Select from Facebook</string>
    <string name="action_cancel_photo">Cancel</string>
    <string name="action_delete_photo">Delete</string>
    <string name="lbl_info_man_gate_title">Thank you for registering in Muapp.</string>
    <string name="lbl_info_man_gate_content">Now girls will vote if you can get in. You need to receive a minimum number of "MUAPPS" to be accepted, this way you\'ll know how much you are being liked before you enter. Plenty of girls are waiting for you.\n\nIn order to be accepted faster you can change your photo. Some recommendations to be more successful:\n\n
        • Select a recent photo that clearly shows your face.\n
        • Avoid photos with other people.\n
        • Choose photos that show your hobbies or interests.\n\nYou can also invite your Friends and get 20% of the votes needed to enter.\n\nGood luck.
    </string>
    <string name="lbl_info_man_gate_remove_description">If you do not want to continue with the admission process you can delete your account and we will eliminate your data.</string>
    <string name="lbl_delete_account">Delete account</string>
    <string name="lbl_deleting_your_account">Deleting your account</string>
    <string name="lbl_delete_account_content">Are you sure you want to delete your Muapp account?</string>
    <string name="lbl_invite_friends">Invite friends</string>
    <string name="lbl_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lbl_verify_my_profile">Verify my profile</string>
    <string name="lbl_insert_your_phone">Insert your phone number</string>
    <string name="lbl_my_profile">My profile</string>
    <string name="lbl_show_studies">Show my studies</string>
    <string name="lbl_show_job">Show my job</string>
    <string name="lbl_show_lastname">Show my lastname</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_matches">Matches</string>
    <string name="lbl_messages">Messages</string>
    <string name="lbl_help"><![CDATA[Help & feedback]]></string>
    <string name="lbl_terms">Terms of use</string>
    <string name="txt_privacy">Privacy</string>
    <string name="lbl_rate_muapp">Rate Muapp</string>
    <string name="btn_logout">Log out</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_edit">Edit</string>
    <string name="matched_at">Match at </string>
    <string name="crush_at">Crush at </string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="days_ago">%d days ago</string>
    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="a_hour_ago">a hour ago</string>
    <string name="a_day_ago">yesterday</string>
    <string name="week_ago">more than a week ago</string>
    <string name="chat_activity_conversations_last_two_hours" formatted="false">Conversations last %dh: </string>
    <string name="chat_activity_conversations_only_you">He\'s only talking to you!</string>
    <string name="chat_activity_last_seen">Last seen </string>
    <string name="chat_match_at">Match </string>
    <string name="chat_crush_at">Crush </string>
    <string name="chat_activity_message_hint">Write a message…</string>
    <string name="chat_activity_button_send">Send</string>
    <string name="matches_last_message_sticker">Sticker</string>
    <string name="matches_last_message_photo">Photo</string>
    <string name="matches_last_message_voice_message">Voice message</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_login_demo">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="matches_fragment_list_empty">You have no matches yet</string>
    <string name="crushes_fragment_list_empty">You have no crushes yet</string>
    <string name="lbl_placeholder_spotify">Find a song on Spotify to add it to your content</string>
    <string name="lbl_about_song">What do you tell us about this song?</string>
    <string name="lbl_about_video">What do you tell us about this video?</string>
    <string name="lbl_write_comment">Write a comment</string>
    <string name="lbl_publish">Publish</string>
    <string name="title_activity_add_phothos">AddPhothosActivity</string>
    <string name="section_format">Hello World from section: %s</string>
    <string name="title_activity_add_photos">AddPhotosActivity</string>
    <string name="lbl_add_videos">Add videos to your profile</string>
    <string name="format_user_years">%d years </string>
    <string name="format_user_hometown">, i was born on</string>
    <string name="format_user_studies">, i studied in</string>
    <string name="format_user_work">, i work in</string>
    <string name="lbl_no_results_found">Sorry, we could not find any results</string>
    <string name="hint_white_your_answer_here">Write your answer here</string>
    <string name="lbl_delete_content">Delete</string>
    <string name="lbl_statistics_visits">Visits</string>
    <string name="lbl_statistics_muapps">Muapps</string>
    <string name="lbl_statistics_matches">Matches</string>
    <string name="lbl_average_score" formatted="false">Average score %s/%d</string>
    <string name="lbl_about_me">About me</string>
    <string name="title_activity_youtube_video_view">YoutubeVideoViewActivity</string>
    <string name="lbl_invite">Invite your friends</string>
    <string name="lbl_share_app">Share app</string>
    <string name="lbl_settings_what_see">Who you want to see?</string>
    <string name="lbl_settings_distance">Distance</string>
    <string name="lbl_settings_age">Age</string>
</resources>