<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.muapp.android.UI.Activity.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/phone_verification_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:background="@color/color_muapp_divider"
                android:gravity="center_vertical"
                android:lines="1"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/lbl_verify_my_profile"
                android:textColor="@color/color_muapp_dark" />

            <TextView
                android:id="@+id/txt_phone_validation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:lines="1"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/lbl_insert_your_phone"
                android:textColor="@color/color_muapp_dark" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="@color/color_muapp_divider"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/lbl_invite"
            android:textColor="@color/color_muapp_dark" />

        <TextView
            android:id="@+id/txt_share_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/lbl_share_app"
            android:textColor="@color/color_muapp_dark" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="@color/color_muapp_divider"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/lbl_settings_what_see"
            android:textColor="@color/color_muapp_dark" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_settings_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/lbl_settings_distance"
                android:textColor="@color/color_muapp_dark"
                android:textSize="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_settings_distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="5 km"
                android:textColor="@color/color_muapp_dark"
                android:textSize="12dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.appyvet.rangebar.RangeBar
                android:id="@+id/distance_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:connectingLineColor="@color/colorAccent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_settings_distance"
                app:pinColor="@color/color_muapp_divider"
                app:pinRadius="0dp"
                app:rangeBar="false"
                app:rangeBarColor="@color/color_muapp_divider"
                app:selectorColor="@color/colorAccent"
                app:selectorSize="10dp"
                app:tickEnd="500"
                app:tickHeight="0dp"
                app:tickInterval="1"
                app:tickStart="1" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="8dp"
                android:background="@color/color_muapp_divider"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/distance_seekbar" />

            <TextView
                android:id="@+id/txt_settings_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/lbl_settings_age"
                android:textColor="@color/color_muapp_dark"
                android:textSize="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/txt_settings_age_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="22 - 30 años"
                android:textColor="@color/color_muapp_dark"
                android:textSize="12dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <com.appyvet.rangebar.RangeBar
                android:id="@+id/age_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:connectingLineColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_settings_age"
                app:pinColor="@color/color_muapp_divider"
                app:pinRadius="0dp"
                app:rangeBarColor="@color/color_muapp_divider"
                app:selectorColor="@color/colorAccent"
                app:selectorSize="10dp"
                app:tickEnd="55"
                app:tickHeight="0dp"
                app:tickInterval="1"
                app:tickStart="18" />


        </android.support.constraint.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="@color/color_muapp_divider"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/lbl_my_profile"
            android:textColor="@color/color_muapp_dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/lbl_show_studies"
                android:textColor="@color/color_muapp_dark"
                tools:text="@string/lbl_show_studies" />

            <CheckBox
                android:id="@+id/chk_studies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_muapp_light_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/lbl_show_job"
                android:textColor="@color/color_muapp_dark" />

            <CheckBox
                android:id="@+id/chk_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_muapp_light_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/lbl_show_lastname"
                android:textColor="@color/color_muapp_dark" />

            <CheckBox
                android:id="@+id/chk_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="@color/color_muapp_divider"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/lbl_notifications"
            android:textColor="@color/color_muapp_dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/lbl_matches"
                android:textColor="@color/color_muapp_dark" />

            <CheckBox
                android:id="@+id/chk_matches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_muapp_light_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/lbl_messages"
                android:textColor="@color/color_muapp_dark" />

            <CheckBox
                android:id="@+id/chk_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="@color/color_muapp_divider"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textColor="@color/color_muapp_dark" />

        <TextView
            android:id="@+id/txt_help"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/lbl_help"
            android:textColor="@color/color_muapp_dark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_muapp_light_grey" />

        <TextView
            android:id="@+id/txt_terms"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/lbl_terms"
            android:textColor="@color/color_muapp_dark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_muapp_light_grey" />

        <TextView
            android:id="@+id/txt_privacy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/txt_privacy"
            android:textColor="@color/color_muapp_dark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_muapp_light_grey" />

        <TextView
            android:id="@+id/txt_rate_muapp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/lbl_rate_muapp"
            android:textColor="@color/color_muapp_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_muapp_divider"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/btn_logout_settings"
                style="@style/main_button_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_logout" />

            <Button
                android:id="@+id/btn_delete_account_settings"
                style="@style/main_button_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_delete_account" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
